# pyphot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  b2b_system.py  dual_b2b_system.py  example-module.py  example-system.py  example.py  pyproject.toml  qam_b2b_dsp.py  requirements.txt  setup.py
backup/: README.md  b2b_system_without_fiber.py  example_without_fiber.py  normal_loop.py
deprecated/: README.md  example.py
docs/: README.md  dev-doc.md  developer-guide.md  ops.md  systems-summary.md  v0.1-doc.md  v0.1.md  组件名称.md
docs/components-list/: class-list.md  function-list.md
docs/toml/: class.toml  example.toml
legacy/: README.md  example.py
phot/: __init__.py
phot/components/: __init__.py  adaptive_equalizer.py  analyzer.py  ber.py  bps.py  dac_noise.py  eye_diagram.py  fiber.py  frame_syncer.py  gaussian_noise.py  gen_symbols.py  modem.py  phase_noise.py  pulse_shaping.py  receiver.py  rx_frontend.py  rx_simple.py  transmitter.py  tx_noise.py
phot/csrc/: main.cpp
phot/optical/: __init__.py  analyzer.py  awgn.py  bit_error.py  bps.py  cdc.py  cma_rde.py  dbp_compensate.py  digital_modulator.py  elec_amp.py  fiber.py  fiber_cupy.py  fiber_numpy.py  fiber_torch.py  fine_sync.py  (+13 more)
ref/: README.md  b2b_system.py  speed_test.py  utils.py
speed_test/: delta_z.py  gpu_transmit_test.py  num_spans.py  span_length.py
templates/: jax_fft_loop.py  numba_fft_loop.py  numpy_fft_loop.py
toml/: PulseShaper.toml  adaptive_equalize.toml  add_dac_noise.toml  add_freq_offset.toml  add_iq_imbalance.toml  bits_error_count.toml  bps_restore.toml  constellation_diagram.toml  dac_noise.toml  eye_diagram.toml  fiber.toml  freq_offset_compensation.toml  gaussian_noise.toml  gen_bits.toml  iq_compensation.toml  iq_freq_offset_and_compensation.toml  optical_fiber_channel.toml  phase_noise.toml  qam_modulate.toml  receiver.toml  signal_power.toml  sync_frame.toml  transmitter.toml
(+42 files in other folders)
