[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phot"
version = "0.2"
authors = [
    { name = "Chunyu Li", email = "cyli0212@gmail.com" },
]
description = "A Python library for the simulation of optical fiber transmission"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'matplotlib>=3.5.2',
    'numba>=0.55.2',
    'numpy>=1.22.4',
    'scikit_commpy>=0.7.0',
    'scipy>=1.8.1'
]

[project.urls]
"Homepage" = "https://gitee.com/opticalab_1/pyphot"